Resolved spacing for Download CV Buttons & 6 icons in footer

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1508,6 +1508,31 @@ $size-header-pad: 4em;
 
 /* Small */
 
+.CVButtons {
+	display: flex;
+	justify-content: center;
+	gap: 1em;
+	margin-bottom: 1em;
+	flex-wrap: wrap;
+
+	.button {
+		flex: 1;
+		min-width: 200px;
+		max-width: 250px;
+	}
+
+	@include breakpoint('<=small') {
+		flex-direction: column;
+		align-items: center;
+		gap: 0.5em;
+
+		.button {
+			width: 100%;
+			max-width: 300px;
+		}
+	}
+}
+
 	@include breakpoint('<=small') {
 
 		$size-header-pad: 1.5em;
